themes/SuiteP/css/style.css
/* ... */
.edit-view-field #duration_hours {
    width: 80px;
    margin-right: 8px;
}

.col-sm-6 .edit-view-field input[type="text"].datetimecombo_date {
    width: 84px;
}
.col-sm-6 .edit-view-field .datetimecombo_time_section {
    display: inline-block;
}


#billing_address_street, #shipping_address_street, #primary_address_street, #alt_address_street {
    height: 54px;
}

#primary_address_street, #alt_address_street {
    width: 60%;
}


.col-sm-6 .edit-view-field[field="billing_address_street"] input[type="text"],
.col-sm-6 .edit-view-field[field="primary_address_street"] input[type="text"],
.col-sm-6 .edit-view-field[field="shipping_address_street"] input[type="text"],
.col-sm-6 .edit-view-field[field="alt_address_street"] input[type="text"]{
    width: 88%;
}

#conditionLines_head,
#fieldLines_head {
    background: none !important;
}

#actionLines,
#actionLines table,
#actionLines tr,
#actionLines td {
    border: 1px solid transparent !important;
}

#actionLines,
#actionLines table {
    clear: both;
    border-radius: 4px;
    width: 100%;
}




/*Line Items*/
#lineItems #service_head,
#lineItems #product_head {
    background: none;
}


#lineItems table > thead:nth-child(1) > tr > td:nth-child(1) [type="text"] {
    width: 50% !important;
}


[field=line_items] {
    float: none;
    width: 100%;
    clear: both;
}

[field=line_items]
#line_items_span,
table#lineItems {
    display: block;
}

#line_items_span {
    width: 100%;
    white-space: normal;
}

table#lineItems tr td table tfoot tr td span {
    width: 20%;
}
table#lineItems tr td table tfoot tr td span input[type="text"] {
    display: block;
    float: none;
}


/*totals*/
#lineItems .totals {
    float: right;
}

#lineItems  #shipping_tax_amt_span {}
#lineItems  #shipping_tax_amt {
    /*Text*/
}

#lineItems  #shipping_tax {
    /*Select*/
}

/*Group*/
#lineItems .group {
    width: 100%;
}

#lineItems .group_body,
#lineItems .group_body > td,
#lineItems .group > thead,
#lineItems .group > thead > tr {
    width: 100%;
    display: block;
    padding: 2px;
    border: 1px solid transparent;
    border-radius: 4px;
}

#lineItems .group > thead ,
#lineItems .group > thead > tr,
#lineItems .group > thead > tr > td {
    background-color: #f5f5f5;
    min-height: 52px;
}

#lineItems .group > thead > tr > td:nth-of-type(1) {
    width: 80%;
    display: inline-block;
}

#lineItems .group > thead > tr > td:nth-of-type(2) {
    width: 20%;
    display: inline-block;
}

#lineItems .group button {
    width: 32px;
    height: 32px;
    padding: 0;
    line-height: 0;
}

#lineItems .group_name {}
#lineItems .delete_group {}
#lineItems .product_group {}
#lineItems .service_group {}
#lineItems .add_product_line {}
#lineItems .add_service_line {}
#lineItems .group_total_amt {}
#lineItems .group_discount_amount {}
#lineItems .group_subtotal_amount {}
#lineItems .group_tax_amount {}
#lineItems .group_subtotal_tax_amount {}
#lineItems .group_total_amount {}
#lineItems  #addGroup {}
/*Labels Next to Fields*/
#lineItems  .alignedLabel {
    display: none;
    visibility: collapse;
}

/*Product Lines*/
#lineItems #product_head  td {
    padding: 0;
    border-bottom: 1px solid #F5F5F5;
}

#lineItems .product_group,
#lineItems .product_group thead,
#lineItems .product_group tr,
#lineItems .product_group td {
    background: none;
}

#lineItems #product_head > td:nth-of-type(1) {
    width: 75px;
}

#lineItems  .product_group {
    width: 1000px;
}

#lineItems  .product_group  > tbody > tr:nth-of-type(1) > td {
    padding-top: 32px;
    padding-bottom: 8px;
}

#lineItems  .product_group  > tbody > tr:nth-of-type(2) > td {
    padding-bottom: 32px;
    border-bottom: 1px solid #F5F5F5;
}

#lineItems .product_qty {
    width: 40px;
    margin: 0 5px 0 0;
}
#lineItems .product_name {
    width: 98%;
    margin: 0 5px 0 0;
}
#lineItems .product_part_number {
    width: 100%;
    margin: 0 5px 0 0;
}
#lineItems .product_part_number_button {
    margin: 0 15px 0 5px;
}
#lineItems .product_list_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .product_discount_text {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .product_discount_amount_select {
    margin: 0 5px 0 0;
}
#lineItems .product_unit_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .product_vat_amt_text {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .product_vat_amt_select {
    margin: 0 5px 0 0;
}
#lineItems .product_total_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .product_delete_line {
    margin: 0 15px 0 5px;
}

#lineItems .product_item_description_label {
    display: block;
}

#lineItems .product_item_description {
    height: 50px;
    width: 95%;
}

#lineItems .product_description_label {
    display: block;
}

#lineItems .product_description {
    height: 50px;
    width: 95%;
}

/*Service Lines*/
#lineItems  #service_head td {
    padding: 0;
    border-bottom: 1px solid #F5F5F5;
}

#lineItems  .service_group  > tbody > tr > td {
    padding-top: 32px;
    padding-bottom: 32px;
    border-bottom: 1px solid #F5F5F5;
}


#lineItems .service_group,
#lineItems .service_group thead,
#lineItems .service_group tr,
#lineItems .service_group td {
    background: none;
}


#lineItems .service_group {
    width: 1000px;
}
#lineItems .service_name {
    width: 95%;
    height: 50px;
    margin: 0 5px 0 0;
}
#lineItems .service_list_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .service_discount_text {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .service_discount_select {
    margin: 0 5px 0 0;
}
#lineItems .service_unit_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .service_vat_text {
    width: 80px;
}
#lineItems .service_vat_select {
    margin: 0 5px 0 5px;
}
#lineItems .service_total_price {
    width: 80px;
    margin: 0 5px 0 0;
}
#lineItems .service_delete_line {
    margin: 0 5px 0 0;
}

#lineItems select {
    line-height: 18px;
}
/* ... */

